use sbt for managing development